# brainos

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
docs/: README-DEV.md  STATUS.md  api.md  authoritative-artifact-hygiene-post-change-report-v0.md  authoritative-artifact-hygiene-slice-brief-v0.md  brainos-backlog-sync-2026-06-02.md  brainos-bounded-retrieval-ingest-hardening-series-2026-06-04.md  brainos-bounded-usage-friction-note-template.md  brainos-current-version-5-task-check-v0.md  brainos-decision-check-round2-1780435393.md  brainos-decision-check-round2b-1780435393.md  brainos-execution-ssot-2026-06-22.md  brainos-followups-from-internet-usage-test-2026-06-04.md  brainos-post-usage-backlog-note.md  brainos-real-test-skepticism-20260604-215147.md  brainos-real-test-stoicism-20260604-214412.md  brainos-usage-test-20260707-210352.md  brainos-usage-test-20260707-210433.md  brainos-usage-test-internet-20260604-124820.md  canonical-e2e-demo.md  decision-check-v2-closeout-2026-06-03.md  decision-check-v2-implementation-brief.md  decision-check-v2-structured-signal-brief.md  decision-layer-review-2026-06-02.md  decision-layer-stability-review-2026-06-02.md  decision-recall-quality-slice-v1-brief.md  decision-support-contract-v1.md  decision-support-object-v1-implementation-brief.md  decision-support-v1-review.md  decision-support-v1-usage-review.md  embedding-contract-and-vector-metadata-design-v0.md  evidence-map.md  implementation-notes.md  litellm-multi-provider-audit-2026-06-03.md  persistent-retrieval-eval-set-v1.md  (+23 more)
(+110 files in other folders)
