[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brainos"
version = "0.1.0"
description = "SQLite-first cognitive memory system for LLM agents"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Wojtek / OpenClaw" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
brainos = "brainos.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
